deploy/demo-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx
  namespace: demo
  labels:
    app: demo-nginx
    app.kubernetes.io/name: demo-nginx
    app.kubernetes.io/part-of: home-k8s-platform
spec:
  type: ClusterIP
  selector:
    app: demo-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
